--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ android {
 
 dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
