--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         </activity>
         <activity android:name=".ui.SearchResultActivity" />
         <activity android:name=".ui.DetailActivity" />
-        <activity android:name=".ui.FenleiActivity"/>
+        <activity android:name=".ui.FenleiActivity" />
+        <activity android:name=".ui.PlayActivity" />
     </application>
 
 </manifest>
