1、修改播发器,播放器demo  bug太多，不想改了，就这样吧

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.SearchResultActivity" />
-        <activity android:name=".ui.DetailActivity" />
+
         <activity android:name=".ui.FenleiActivity" />
         <activity
-            android:name=".ui.PlayActivity"
+            android:name=".ui.DetailActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
