1、爬虫jar包源码 2、海兔详情数据解析

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
         exclude group: 'xmlpull', module: 'xmlpull'
     }
     implementation 'cn.jzvd:jiaozivideoplayer:7.7.0'
+    implementation "cn.wanghaomiao:JsoupXpath:$jsoupxpath_version"
 }
